--- a/static/style.css
+++ b/static/style.css
@@ -415,8 +415,8 @@ input[type="file"] {
 
 .historial-img {
   width: 100%;
-  height: 180px;
-  object-fit: cover;
+  height: auto;
+  object-fit: contain;
 }
 
 .historial-img-vacia {
